daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/h0.hex
f3111b703c34e3b2487355556514f8682ca4ea27cd4454c2df9de9095a3823002b3332774b08f905734466b77d27ccf36d079570f97beb444aef3c28c9d40189
